--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 }
 </style>
   <body>
-    <a href="https://csp-2003-zatboii.c9users.io/My_stuff/home.html" style="color:tomato; font-family: Comic Sans MS">Home</a>
+    <a href="https://csp-2003-zatboii.c9users.io/My_stuff/home.html" style="color:red; font-family: Comic Sans MS">Home</a>
     <a href="https://csp-2003-zatboii.c9users.io/My_stuff/portfolio.html" style="color:purple; font-family: comic sans ms">Portfolio</a>
     <a href="https://csp-2003-zatboii.c9users.io/My_stuff/vocab.html" style="color:red;">Vocab</a>
   <h1 style="color:red">This is my test Home Page!</h1>
